--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "issue-form-block",
   "version": "0.0.1",
   "license": "MIT",
-  "description": "",
+  "description": "// TODO(HiDeoo)",
   "author": "HiDeoo <github@hideoo.dev> (https://hideoo.dev)",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test implemented.\" && exit 1",
+    "dev": "blocks start",
+    "build": "blocks build",
     "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0 && tsc --noEmit",
     "prepare": "husky install"
+  },
+  "dependencies": {
+    "@githubnext/blocks": "2.3.5",
+    "@primer/react": "35.25.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@hideoo/eslint-config": "1.3.0",
     "@hideoo/prettier-config": "1.0.1",
     "@hideoo/tsconfig": "2.0.1",
+    "@types/react": "18.2.0",
     "eslint": "8.39.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.1",
@@ -26,7 +34,9 @@
   "packageManager": "pnpm@8.3.1",
   "private": true,
   "sideEffects": false,
-  "keywords": [],
+  "keywords": [
+    "// TODO(HiDeoo)"
+  ],
   "homepage": "https://github.com/HiDeoo/issue-form-block",
   "repository": {
     "type": "git",
