--- a/.github/blocks/config.json
+++ b/.github/blocks/config.json
@@ -1,6 +1,11 @@
 {
   "allow": [
     {
+      "owner": "HiDeoo",
+      "repo": "issue-form-block",
+      "id": "issue-form-block"
+    },
+    {
       "owner": "githubnext",
       "repo": "blocks-examples",
       "id": "markdown-block"
