--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,30 +18,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
       - name: Install pnpm
         uses: pnpm/action-setup@v2.2.4
         with:
           version: 8.3.1
-          run_install: false
 
-      - name: Get pnpm store directory path
-        id: pnpm-store-dir-path
-        shell: bash
-        run: echo "PNPM_STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-      - name: Setup pnpm store cache
-        uses: actions/cache@v3
-        id: pnpm-store-cache
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          path: ${{ steps.pnpm-store-dir-path.outputs.PNPM_STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
+          cache: pnpm
+          node-version: 18
 
       - name: Install dependencies
         run: pnpm install
