--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   },
   "dependencies": {
     "@githubnext/blocks": "2.3.5",
+    "@primer/octicons-react": "18.3.0",
     "@primer/react": "35.25.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.4",
+    "yaml": "2.2.2",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@hideoo/eslint-config": "1.3.0",
