--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@githubnext/blocks": "2.3.5",
     "@primer/octicons-react": "18.3.0",
     "@primer/react": "35.25.1",
+    "jotai": "2.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.4",
