feat: metadata editor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@hideoo/tsconfig",
   "compilerOptions": {
+    "exactOptionalPropertyTypes": false,
     "moduleResolution": "node"
   }
 }
