--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@primer/octicons-react": "18.3.0",
     "@primer/react": "35.25.1",
     "jotai": "2.0.4",
+    "markdown-it": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.4",
@@ -29,6 +30,7 @@
     "@hideoo/eslint-config": "1.3.0",
     "@hideoo/prettier-config": "1.0.1",
     "@hideoo/tsconfig": "2.0.1",
+    "@types/markdown-it": "12.2.3",
     "@types/react": "18.2.0",
     "eslint": "8.39.0",
     "husky": "8.0.3",
