--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@primer/react": "35.25.1",
     "jotai": "2.0.4",
     "markdown-it": "13.0.1",
+    "nanoid": "4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.4",
