--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@githubnext/blocks": "2.3.5",
     "@primer/octicons-react": "18.3.0",
     "@primer/react": "35.25.1",
+    "highlight.js": "11.8.0",
     "jotai": "2.0.4",
     "markdown-it": "13.0.1",
     "nanoid": "4.0.2",
