test: add serialization process tests

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "blocks start",
     "build": "blocks build",
+    "test": "vitest",
     "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0 && tsc --noEmit",
     "prepare": "husky install"
   },
@@ -34,10 +35,12 @@
     "@types/markdown-it": "12.2.3",
     "@types/react": "18.2.0",
     "eslint": "8.40.0",
+    "happy-dom": "9.10.9",
     "husky": "8.0.3",
     "lint-staged": "13.2.1",
     "prettier": "2.8.8",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vitest": "0.31.0"
   },
   "pnpm": {
     "peerDependencyRules": {
