--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@primer/octicons-react": "18.3.0",
     "@primer/react": "35.25.1",
     "highlight.js": "11.8.0",
-    "jotai": "2.0.4",
     "markdown-it": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.4",
     "yaml": "2.2.2",
-    "zod": "3.21.4"
+    "zod": "3.21.4",
+    "zustand": "4.3.8"
   },
   "devDependencies": {
     "@hideoo/eslint-config": "1.4.0",
