--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.4",
+    "throttle-debounce": "5.0.0",
     "yaml": "2.2.2",
     "zod": "3.21.4",
     "zustand": "4.3.8"
@@ -34,6 +35,7 @@
     "@hideoo/tsconfig": "2.0.1",
     "@types/markdown-it": "12.2.3",
     "@types/react": "18.2.0",
+    "@types/throttle-debounce": "5.0.0",
     "eslint": "8.40.0",
     "happy-dom": "9.10.9",
     "husky": "8.0.3",
