--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@githubnext/blocks": "2.3.5",
     "@primer/octicons-react": "18.3.0",
     "@primer/react": "35.25.1",
+    "@sindresorhus/slugify": "2.2.0",
     "highlight.js": "11.8.0",
     "markdown-it": "13.0.1",
     "react": "18.2.0",
