--- a/examples/debug.yml
+++ b/examples/debug.yml
@@ -1,6 +1,9 @@
 name: Debug issue form
 description: A debug issue form
 body:
+  - type: markdown
+    attributes:
+      value: This is a test.
   - type: input
     attributes:
       label: Hello
