--- a/examples/debug.yml
+++ b/examples/debug.yml
@@ -1,9 +1,9 @@
 name: Debug issue form
 description: A debug issue form
 body:
-  - type: markdown
-    attributes:
-      value: This is a test.
   - type: input
     attributes:
-      label: Hello
+      label: Ahoy
+  - type: markdown
+    attributes:
+      value: This is a second test.
